spacing fix

--- a/src/components/customer-components/customer.css
+++ b/src/components/customer-components/customer.css
@@ -48,6 +48,7 @@
 }
 
 .OrderManagePaper {
+    padding: 2%;
     display: flex;
     flex-direction: column;
     justify-content: center;
